--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Wx-Package-Win32
-version:      0.02
-version_from: lib/Wx/Package/Win32.pm
+version:      0.03
+version_from: lib/Wx/Package/Win32/ProcMods.pm
 installdirs:  site
 requires:
     Wx:                            0.27
